--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,17 @@
     <artifactId>WeatherDesktopApp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>com.zenjava</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>8.6.0</version>
+          <configuration>
+            <mainClass>pl.tomaszmiller.Main</mainClass>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
     
 </project>
