--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,24 @@
             <mainClass>pl.tomaszmiller.Main</mainClass>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
       </plugins>
     </build>
-    
+
+  <!-- https://mvnrepository.com/artifact/org.json/json -->
+  <dependencies>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20170516</version>
+    </dependency>
+  </dependencies>
+
 </project>
